addtask adjusted max-height  to  avoid overlapping with  manu

--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -91,7 +91,6 @@
   }
   .content-container {
     position: static;
-
     margin: 264px 70px 0px calc(232px + 64px);
     max-height: calc(100vh - 424px);
     box-shadow: 0 0 14px #2a364739;
@@ -306,6 +305,12 @@
   .success-msg-popup {
     top: calc(50%);
     left: 1180px;
+  }
+}
+@media (min-width: 1341px) and (min-height: 901px) {
+  .content-container {
+    height: calc(100vh - 404px);
+    max-height: 520px;
   }
 }
 @media (min-width: 1341px) and (max-height: 900px) {
